// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`deferTask should execute a task, async 1`] = `
[
  [
    {
      "type": "isRunning",
      "value": [Function],
    },
  ],
  [
    {
      "type": "start",
      "value": [Function],
    },
  ],
  [
    {
      "type": "run",
      "value": [Function],
    },
  ],
]
`;

exports[`deferTask should execute a task, async options 1`] = `
[
  [
    {
      "type": "isRunning",
      "value": [Function],
    },
  ],
  [
    {
      "type": "start",
      "value": [Function],
    },
  ],
  [
    {
      "type": "run",
      "value": [Function],
    },
  ],
  [
    {
      "type": "run",
      "value": [Function],
    },
  ],
  [
    {
      "type": "run",
      "value": [Function],
    },
  ],
]
`;

exports[`deferTask should execute a task, sync 1`] = `
[
  [
    {
      "type": "isRunning",
      "value": [Function],
    },
  ],
  [
    {
      "type": "start",
      "value": [Function],
    },
  ],
  [
    {
      "type": "run",
      "value": [Function],
    },
  ],
]
`;

exports[`deferTask should execute a task, sync options 1`] = `
[
  [
    {
      "type": "isRunning",
      "value": [Function],
    },
  ],
  [
    {
      "type": "start",
      "value": [Function],
    },
  ],
  [
    {
      "type": "run",
      "value": [Function],
    },
  ],
  [
    {
      "type": "run",
      "value": [Function],
    },
  ],
  [
    {
      "type": "run",
      "value": [Function],
    },
  ],
]
`;

exports[`deferTask should stop a task 1`] = `
[
  [
    {
      "type": "start",
      "value": [Function],
    },
  ],
  [
    {
      "type": "run",
      "value": [Function],
    },
  ],
  [
    {
      "type": "isRunning",
      "value": [Function],
    },
  ],
  [
    {
      "type": "run:stopped",
      "value": [Function],
    },
  ],
  [
    {
      "type": "stop",
      "value": [Function],
    },
  ],
  [
    {
      "type": "isRunning",
      "value": [Function],
    },
  ],
]
`;
